--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,7 @@ Package: nppen
 Type: Package
 Title: Non-Parametric Probabilistic Ecological Niche
 Version: 0.1.0
-Author: "Jean-Olivier Irisson <irisson@@normalesup.org> [aut, cre]"
-Maintainer: "Jean-Olivier Irisson <irisson@@normalesup.org> [aut, cre]"
 Description: Implementation of Non-Parametric Probabilistic Ecological Niche (NPPEN) from Beaugrand, Lenoir, Ibañez, and Manté. A new model to assess the probability of occurrence of a species, based on presence-only data, Marine Ecology Progress Series, 424:175--190, 2011. NPPEN is a niche model to predict the occurrence of species based on environmental conditions.
+Authors@R: person(given = "Jean-Olivier", family = "Irisson", email = "irisson@normalesup.org", role = c("aut", "cre"))
 License: GPL-3
 LazyData: TRUE
