Reimplement (and document) rasterize
- Force to get exactly the specified number of bins (through cut()) when using n
- Identify bins by the average of observed variables inside the bin (more precise for the niche model afterwards)

The computation is done through dplyr

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,6 @@ Description: Implementation of Non-Parametric Probabilistic Ecological Niche
     the occurrence of species based on environmental conditions.
 License: GPL-3
 LazyData: TRUE
+Imports:
+    dplyr
 RoxygenNote: 5.0.1
